--- a/src/style/style.less
+++ b/src/style/style.less
@@ -243,27 +243,27 @@ md-input-container.inquery {
 .select-page {
   width: 30px;
 }
-.breadcrumb {
-  height: 48px;
-  letter-spacing: .005em;
-  box-sizing: border-box;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  align-items: center;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: row;
-  flex-direction: row;
-  width: 100%;
-  padding: 0 16px;
-  margin: 0;
-  color: #fff !important;
-  overflow: hidden;
+
+.breadcrumb{
+    height:48px;
+    letter-spacing: .005em;
+    box-sizing: border-box;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+    flex-direction: row;
+    width: 100%;
+    padding: 0 16px;
+    margin: 0;
+    color: #fff !important;
+    overflow: hidden;
 }
+
 /** fix height of <div class="md-errors-spacer"></div>**/
-.md-errors-spacer:empty {
-  display: none;
-}
+.md-errors-spacer:empty { display: none; }
