--- a/public/style/style.css
+++ b/public/style/style.css
@@ -2,9 +2,9 @@
   font-family: 'Material Icons';
   font-style: normal;
   font-weight: 400;
-  src: url(/public/style/font/material-design-icons/MaterialIcons-Regular.eot);
+  src: url('/public/style/font/material-design-icons/MaterialIcons-Regular.eot');
   /* For IE6-8 */
-  src: local('Material Icons'), local('MaterialIcons-Regular'), url(/public/style/font/material-design-icons/MaterialIcons-Regular.woff2) format('woff2'), url(/public/style/font/material-design-icons/MaterialIcons-Regular.woff) format('woff'), url(/public/style/font/material-design-icons/MaterialIcons-Regular.ttf) format('truetype');
+  src: local('Material Icons'), local('MaterialIcons-Regular'), url('/public/style/font/material-design-icons/MaterialIcons-Regular.woff2') format('woff2'), url('/public/style/font/material-design-icons/MaterialIcons-Regular.woff') format('woff'), url('/public/style/font/material-design-icons/MaterialIcons-Regular.ttf') format('truetype');
 }
 .material-icons {
   font-family: 'Material Icons';
@@ -266,4 +266,42 @@ md-input-container.inquery {
 /** fix height of <div class="md-errors-spacer"></div>**/
 .md-errors-spacer:empty {
   display: none;
+}
+.contact-item .md-list-item-text {
+  padding: 14px 0;
+  max-width: 190px;
+}
+.contact-item .md-list-item-text h3 {
+  margin: 0 !important;
+  padding: 0;
+  line-height: 1.2em !important;
+}
+@media (min-width: 960px) {
+  .contact-item {
+    float: left;
+    width: 50%;
+  }
+}
+img.md-avatar.platform {
+  background: url('/public/images/platform-min.png') no-repeat;
+}
+img.md-avatar.platform.so,
+img.md-avatar.platform.SO {
+  background-position-y: -320px;
+}
+img.md-avatar.platform.sf,
+img.md-avatar.platform.SF {
+  background-position-y: -280px;
+}
+img.md-avatar.platform.su,
+img.md-avatar.platform.SU {
+  background-position-y: -240px;
+}
+img.md-avatar.platform.powerapp,
+img.md-avatar.platform.PowerApp {
+  background-position-y: -120px;
+}
+a.button {
+  cursor: pointer;
+  float: right;
 }
