--- a/src/style/style.less
+++ b/src/style/style.less
@@ -2,9 +2,9 @@
   font-family: 'Material Icons';
   font-style: normal;
   font-weight: 400;
-  src: url(/public/style/font/material-design-icons/MaterialIcons-Regular.eot);
+  src: url('/public/style/font/material-design-icons/MaterialIcons-Regular.eot');
   /* For IE6-8 */
-  src: local('Material Icons'), local('MaterialIcons-Regular'), url(/public/style/font/material-design-icons/MaterialIcons-Regular.woff2) format('woff2'), url(/public/style/font/material-design-icons/MaterialIcons-Regular.woff) format('woff'), url(/public/style/font/material-design-icons/MaterialIcons-Regular.ttf) format('truetype');
+  src: local('Material Icons'), local('MaterialIcons-Regular'), url('/public/style/font/material-design-icons/MaterialIcons-Regular.woff2') format('woff2'), url('/public/style/font/material-design-icons/MaterialIcons-Regular.woff') format('woff'), url('/public/style/font/material-design-icons/MaterialIcons-Regular.ttf') format('truetype');
 }
 .material-icons {
   font-family: 'Material Icons';
@@ -267,3 +267,43 @@ md-input-container.inquery {
 
 /** fix height of <div class="md-errors-spacer"></div>**/
 .md-errors-spacer:empty { display: none; }
+
+.contact-item{
+  .md-list-item-text{
+    padding: 14px 0;
+    max-width: 190px;
+    h3{
+      margin: 0 !important;
+      padding: 0;
+      line-height: 1.2em !important;
+    }
+  }
+   @media (min-width: 960px) {
+      float: left;
+      width: 50%; }
+}
+
+@avator-height:-40px;
+img.md-avatar{
+  &.platform{
+    background:url('/public/images/platform-min.png') no-repeat;
+    &.so,&.SO{
+      background-position-y: @avator-height*8
+    }
+    &.sf,&.SF{
+      background-position-y: @avator-height*7
+    }
+    &.su,&.SU{
+      background-position-y: @avator-height*6
+    }
+    &.powerbi,&.PowerBI{
+    }
+    &.powerapp,&.PowerApp{
+      background-position-y: @avator-height*3
+    }
+  }
+}
+
+a.button{
+  cursor: pointer;float: right;
+}
