--- a/src/style/style.less
+++ b/src/style/style.less
@@ -191,6 +191,7 @@ button.badge1 {
   min-width: 60px;
   /*line-height: 30px;*/
 }
+.md-button.md-flat.md-tiny,
 .md-button.md-raised.md-tiny {
   overflow: hidden;
   text-overflow: ellipsis;
@@ -306,4 +307,50 @@ img.md-avatar{
 
 a.button{
   cursor: pointer;float: right;
+}
+
+.no-margin{
+  margin:0px !important;
+}
+.no-padding{
+  padding:0px !important;
+}
+.no-left-margin{
+  margin-left:0px !important;
+}
+.no-right-margin{
+  margin-right:0px !important;
+}
+.no-left-padding{
+  padding-left:0px !important;
+}
+.no-right-padding{
+  padding-right:0px !important;
+}
+
+.groupX {
+    font-size: 16px;
+    margin: 20px 0;
+    padding: 3px 15px 3px 15px;
+    // color: rgb(49, 46, 46);
+    border:1px solid #ccc;
+    text-transform: none;
+    font-weight: 400;
+    min-width:100px;
+    &.md-button{
+      &.left{
+        border-radius: 10px 0 0 10px;
+      }
+      &.middle{
+        border-radius: 0;
+        border-left: 1px solid rgba(230, 230, 230, 0.96);
+        border-right: 1px solid rgba(230, 230, 230, 0.96);
+      }
+      &.right{
+        border-radius: 0 10px 10px 0;
+      }
+      &&:hover{
+        -webkit-filter: grayscale(25%);
+      }
+    }
 }
