--- a/public/style/tables.css
+++ b/public/style/tables.css
@@ -235,11 +235,13 @@ thead {
 }
 
 td, th {
-  padding: 15px 5px;
   display: table-cell;
   text-align: left;
   vertical-align: middle;
   border-radius: 2px;
+}
+th{
+  padding: 15px 5px;
 }
 
 @media only screen and (max-width: 992px) {
