--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -8,24 +8,19 @@
     <md-card>
         <md-grid-list md-cols="4" md-row-height="48px">
             <md-grid-tile md-colors="{background:'blue'}">
-                <md-grid-tile-header>
                     <h3>New Threads</h3>
-                </md-grid-tile-header>
+                    <md-button class="md-fab md-accent md-mini">3</md-button>
             </md-grid-tile>
             <md-grid-tile md-colors="{background:'yellow'}">
-                <md-grid-tile-header>
                     <h3>Pendding</h3>
-                </md-grid-tile-header>
+                    <md-button class="md-fab md-mini">3</md-button>
             </md-grid-tile>
             <md-grid-tile md-colors="{background:'green'}">
-                <md-grid-tile-header>
                     <h3>Today UT</h3>
-                </md-grid-tile-header>
+                    <md-button class="md-flat md-mini" md-colors="{color:'yellow'}">360(75%)</md-button>
             </md-grid-tile>
             <md-grid-tile md-colors="{background:'red'}">
-                <md-grid-tile-header>
                     <h3>Anything else</h3>
-                </md-grid-tile-header>
             </md-grid-tile>
         </md-grid-list>
     </md-card>
@@ -33,16 +28,15 @@
 
     <!--thread table start-->
     <md-card>
-    <md-tabs md-dynamic-height md-border-bottom>
-      <md-tab label="OverAll">
-        
-      </md-tab>
-      <md-tab label="Subscription 1">
-      </md-tab>
-      <md-tab label="Subscription 2">
-      </md-tab>
-    </md-tabs>
-    <md-card style="margin:0;">
+        <md-tabs md-dynamic-height md-border-bottom>
+            <md-tab label="OverAll">
+            </md-tab>
+            <md-tab label="Subscription 1">
+            </md-tab>
+            <md-tab label="Subscription 2">
+            </md-tab>
+        </md-tabs>
+        <md-card style="margin:0;">
             <md-card-header layout="column" md-colors="{color:'blue'}" style="padding:12px 12px 0;">
                 <md-card-header-text layout-align="start start">
                     <span class="md-title">Query</span>
@@ -50,43 +44,127 @@
             </md-card-header>
             <!--<md-divider></md-divider>-->
             <md-card-content layout="row" layout-align="center center" style="padding:8px;padding-top: 0px">
-            <div flex layout="row">
-                <md-input-container class="inquery" flex="20">
-                    <label>Owner</label>
-                    <input type="text" name="owner" ng-model="params.owner">
-                </md-input-container>
-                <md-input-container class="inquery" flex="20">
-                    <label>Status</label>
-                    <md-select name="status" ng-model="params.status">
-                        <md-option value="all" selected>All</md-option>
-                        <md-option ng-repeat="s in CONST.PROGRESS_STATUS" value="{{s}}">{{s}}</md-option>
-                    </md-select>
-                </md-input-container>
-                <md-input-container class="inquery" flex="20">
-                    <label>Products</label>
-                    <md-select name="product" ng-model="params.product">
-                        <!--<md-option value="all">All</md-option>-->
-                        <md-option ng-repeat="p in products" ng-value="p.Value">{{p.Name}}</md-option>
-                    </md-select>
-                </md-input-container>
-                <md-input-container class="inquery" flex="20">
-                    <label>Platform</label>
-                    <md-select name="platform" ng-model="params.platform">
-                        <!--<md-option value="all">All</md-option>-->
-                        <md-option ng-repeat="p in platforms" ng-value="p.Value">{{p.Name}}</md-option>
-                    </md-select>
-                </md-input-container>
-                <div flex layout="row" layout-align="end center">
-                    <md-button class="inline md-icon-button md-primary" ng-click="getResultsPage()">
-                        <md-icon md-font-set="material-icons" md-colors="{color:'green'}">find_in_page</md-icon>
-                    </md-button>
-                    <md-button class="inline md-icon-button" ng-click="clearQuery()">
-                        <md-icon md-font-set="material-icons" md-colors="{color:'deep-orange'}">refresh</md-icon>
-                    </md-button>
+                <div flex layout="row">
+                    <md-input-container class="inquery" flex="20">
+                        <label>Owner</label>
+                        <input type="text" name="owner" ng-model="params.owner">
+                    </md-input-container>
+                    <md-input-container class="inquery" flex="20">
+                        <label>Status</label>
+                        <md-select name="status" ng-model="params.status">
+                            <md-option value="all" selected>All</md-option>
+                            <md-option ng-repeat="s in CONST.PROGRESS_STATUS" value="{{s}}">{{s}}</md-option>
+                        </md-select>
+                    </md-input-container>
+                    <md-input-container class="inquery" flex="20">
+                        <label>Products</label>
+                        <md-select name="product" ng-model="params.product">
+                            <!--<md-option value="all">All</md-option>-->
+                            <md-option ng-repeat="p in products" ng-value="p.Value">{{p.Name}}</md-option>
+                        </md-select>
+                    </md-input-container>
+                    <md-input-container class="inquery" flex="20">
+                        <label>Platform</label>
+                        <md-select name="platform" ng-model="params.platform">
+                            <!--<md-option value="all">All</md-option>-->
+                            <md-option ng-repeat="p in platforms" ng-value="p.Value">{{p.Name}}</md-option>
+                        </md-select>
+                    </md-input-container>
+                    <div flex layout="row" layout-align="end center">
+                        <md-button class="inline md-icon-button md-primary" ng-click="getResultsPage()">
+                            <md-icon md-font-set="material-icons" md-colors="{color:'green'}">find_in_page</md-icon>
+                        </md-button>
+                        <md-button class="inline md-icon-button" ng-click="clearQuery()">
+                            <md-icon md-font-set="material-icons" md-colors="{color:'deep-orange'}">refresh</md-icon>
+                        </md-button>
+                    </div>
                 </div>
-            </div>
             </md-card-content>
         </md-card>
+        <table st-table="stTable" st-safe-src="list" class="bordered highlight stTable">
+            <thead>
+                <tr>
+                    <th></th>
+                    <th>Owner</th>
+                    <th>Status</th>
+                    <th>title</th>
+                    <th st-sort="create_date" st-sort-default="reverse" st-skip-natural="true">Create Datetime</th>
+                    <th st-sort="created_at" st-sort-default="reverse" st-skip-natural="true">LastUpdate Datetime</th>
+                    <th>IRT</th>
+                    <th>QR</th>
+                    <th>UT</th>
+                </tr>
+            </thead>
+            <tbody ng-show="isLoading">
+                <tr>
+                    <td colspan="8" class="text-center">
+                        <div layout="row" layout-sm="column" layout-align="space-around">
+                            <md-progress-circular md-mode="isLoading"></md-progress-circular>
+                        </div>
+                    </td>
+                </tr>
+            </tbody>
+            <tbody ng-show="!isLoading">
+                <tr ng-repeat="row in stTable track by $index">
+                    <td width="100">
+                        <!--<md-button class="md-icon-button md-mini" md-colors="{color:'indigo-100-0.54'}" aria-label="Take Ownership">
+                            <md-tooltip md-direction="bottom">
+                                Take Ownership
+                            </md-tooltip>
+                            <md-icon md-font-set="material-icons">lock_open</md-icon>
+                        </md-button>-->
+                        <md-button class="md-icon-button md-mini" ng-show="row.takeToggle" md-colors="{background:'indigo-100-0.54'}" aria-label="Take Ownership"
+                            ng-init="row.takeToggle=!(row.support_alias.length>0)" ng-click="takeOwnership(row)">
+                            <md-tooltip md-direction="bottom">
+                                Take Ownership
+                            </md-tooltip>
+                            <md-icon md-font-set="material-icons">lock_open</md-icon>
+                        </md-button>
+                        <md-button class="md-icon-button md-mini" ng-show="!row.takeToggle" md-colors="{background:'orange'}" aria-label="Take Ownership"
+                            ng-click="releaseOwnership(row)">
+                            <md-tooltip md-direction="bottom">
+                                Release Ownership
+                            </md-tooltip>
+                            <md-icon md-font-set="material-icons">lock</md-icon>
+                        </md-button>
+                    </td>
+                    <td width="100">{{row.support_alias}}</td>
+                    <td width="100">
+                        <md-menu md-offset="0 30">
+                            <md-button class="md-raised md-tiny label" md-colors="{background:CONST.ISSUE_STATUS_COLOR[CONST.ISSUE_STATUS.indexOf(row.status||'New Issue')]}"
+                                md-whiteframe="1" ng-click="openMenu($mdOpenMenu,$event)">{{row.status||'New Issue'}}</md-button>
+                            <md-menu-content width="3">
+                                <md-menu-item ng-repeat="item in CONST.ISSUE_STATUS">
+                                    <md-button ng-click="changeIssueStauts(row,item)"> {{item}} </md-button>
+                                </md-menu-item>
+                            </md-menu-content>
+                        </md-menu>
+                    </td>
+                    <td><a ng-href="{{row.link}}" target="_blank">{{row.title}}</a></td>
+                    <td>{{row.create_date}}</td>
+                    <td></td>
+                    <td>{{row.IRT| secondsToDateTime | date:'HH:mm:ss'}}</td>
+                    <td></td>
+                    <td>
+                        <md-button class="md-fab md-mini md-primary" ng-click="showUTDialog($event,{fkid:row.id,entity:row})" aria-label="Log UT">
+                            <md-tooltip md-direction="bottom">
+                                Add UT
+                            </md-tooltip>
+                            {{row.utdata}}
+                        </md-button>
+                    </td>
+                    <td>
+                    </td>
+                </tr>
+            </tbody>
+            <tfoot>
+                <tr>
+                    <td colspan="9" style="padding:0">
+                        <div st-items-by-page="10" st-pagination="" st-template="public/templates/pagination.custom.html"></div>
+                    </td>
+                </tr>
+            </tfoot>
+        </table>
     </md-card>
-<!--thread table end-->
+    <!--thread table end-->
 </md-content>
