--- a/public/templates/subscription_detail.html
+++ b/public/templates/subscription_detail.html
@@ -7,7 +7,7 @@
 
     <!--thread table start-->
 
-    <md-content layout="row" layout-align="start start">
+    <md-content layout="row" layout-align="start start" style="padding:8px">
         <!--subscription details start-->
         <md-content md-whiteframe="4" flex-md="60" flex="70">
             <md-subheader class="md-no-sticky" md-colors="{background:'indigo'}">Subscription Details</md-subheader>
@@ -29,68 +29,87 @@
                             </span>
                         </md-chip-template>
                     </md-chips>
+                    <md-chips ng-model="form.selectTopics" md-require-match="true" md-autocomplete-snap>
+                        <md-autocomplete md-selected-item="selectedTopicItem" md-search-text="searchTopicText" md-items="item in querySearch(searchTopicText,'topic')"
+                            md-item-text="item" placeholder="Search for a Topic">
+                            <span md-highlight-text="searchTopicText">{{item}}</span>
+                        </md-autocomplete>
+                        <md-chip-template>
+                            <span>
+                                <strong>{{$chip}}</strong>
+                            </span>
+                        </md-chip-template>
+                    </md-chips>
                 </md-card-content>
+                
+                <section layout="row" layout-align="end center" style="margin-right:20px">
+                    <md-button class="groupX left" md-colors="{background:'orange-800'}">Clear</md-button>
+                    <md-button class="groupX middle" md-colors="{background:'red'}">Cancel</md-button>
+                    <md-button class="groupX right" md-colors="{background:'green'}">Submit</md-button>
+                </section>
             </md-card>
         </md-content>
         <!--subscription details end-->
 
         <!--Available Resources start-->
         <md-content flex layout="column" layout-align="center start" style="border-left: 1px solid #ccc;">
-<md-content md-whiteframe="4" flex style="width: 100%">
-<md-subheader class="md-no-sticky" md-colors="{background:'green'}">Available Resources</md-subheader>
-<md-list>
-    <md-subheader class="md-no-sticky">Platforms</md-subheader>
-    <md-list-item class="md-1-line contact-item" ng-repeat="p in availablePlatform" ng-click="addToChips(p,'platform')">
-        <img class="md-avatar platform {{p}}" />
-        <div class="md-list-item-text" layout="column">
-            <h3>{{p}}</h3>
-        </div>
-    </md-list-item>
-</md-list>
-<md-divider style="clear: both;"></md-divider>
-<md-list class="md-dense">
-    <md-subheader class="md-no-sticky">Topics</md-subheader>
-    <md-list-item class="md-1-line" ng-repeat="t in availableTopic" ng-click="null">
-        <div class="md-list-item-text" layout="column">
-            <h3><b>{{t}}</b> ::
-                <md-button md-no-ink class="md-raised md-tiny label">tag1</md-button>
-                <md-button md-no-ink class="md-raised md-tiny label">tag2</md-button>
-                <md-button md-no-ink class="md-raised md-tiny label">tag3</md-button>
-            </h3>
-        </div>
-        <md-divider></md-divider>
-    </md-list-item>
-</md-list>
-</md-content>
-<!--Available Resources end-->
+            <md-content md-whiteframe="4" flex style="width: 100%">
+                <md-subheader class="md-no-sticky" md-colors="{background:'green'}">Available Resources</md-subheader>
+                <md-list style="max-height: 232px;float:left;overflow-y: auto">
+                    <md-subheader class="md-no-sticky">Platforms
+                        
+                    </md-subheader>
+                    <md-list-item class="md-1-line contact-item" ng-repeat="p in availablePlatform" ng-click="addToChips(p,'platform')">
+                        <img class="md-avatar platform {{p}}" />
+                        <div class="md-list-item-text" layout="column">
+                            <h3>{{p}}</h3>
+                        </div>
+                    </md-list-item>
+                </md-list>
+                <md-divider style="clear: both;"></md-divider>
+                <md-list class="md-dense">
+                    <md-subheader class="md-no-sticky">Topics</md-subheader>
+                    <md-list-item class="md-1-line compact" ng-repeat="t in availableTopic" ng-click="addToChips(t,'topic')">
+                        <div class="md-list-item-text" layout="column">
+                            <p style="margin:0px"><b>{{t}}</b> ::
+                                <md-button md-no-ink class="md-flat md-tiny no-margin">tag1</md-button>
+                                <md-button md-no-ink class="md-flat md-tiny no-margin">tag2</md-button>
+                                <md-button md-no-ink class="md-flat md-tiny no-margin">tag3</md-button>
+                            </p>
+                        </div>
+                        <md-divider></md-divider>
+                    </md-list-item>
+                </md-list>
+            </md-content>
+            <!--Available Resources end-->
 
 
-<!--Subscription Samples start-->
-<md-content md-whiteframe="2" flex style="width: 100%">
-<!--<md-card>-->
-<md-list class="md-dense" flex style="padding:0;">
-<md-subheader class="md-no-sticky" md-colors="{background:'blue'}">Subscription Samples
-    <a class="button" ng-click="toggleSample=!toggleSample" ng-init="toggleSample=true">
+            <!--Subscription Samples start-->
+            <md-content md-whiteframe="2" flex style="width: 100%">
+                <!--<md-card>-->
+                <md-list class="md-dense" flex style="padding:0;">
+                    <md-subheader class="md-no-sticky" md-colors="{background:'blue'}">Subscription Samples
+                        <a class="button" ng-click="toggleSample=!toggleSample" ng-init="toggleSample=true">
                             <md-icon md-font-set="material-icons" style="color:#fff">more_vert</md-icon>
-</a>
-</md-subheader>
-<md-content style="max-height:228px;overflow-y: auto" ng-show="toggleSample">
-<md-list-item class="md-3-line noright" ng-repeat="s in subscriptions" ng-click="null">
-    <div class="md-list-item-text" layout="column">
-        <h3 layout="row" layout-align="start start"><span flex="30">Name</span><span flex>{{s.name}}</span></h3>
-        <h4 layout="row" layout-align="start start"><span flex="30">Platfrom</span><span flex>{{s.platfroms}}</span></h4>
-        <h4 layout="row" layout-align="start start"><span flex="30">Topic</span><span flex>{{s.topic}}</span></h4>
-    </div>
-    <md-divider></md-divider>
-</md-list-item>
-</md-content>
-</md-list>
-<!--</md-card>-->
-</md-content>
-</md-content>
-<!--Subscription Samples end-->
+                        </a>
+                    </md-subheader>
+                    <md-content style="max-height:228px;overflow-y: auto" ng-show="toggleSample">
+                        <md-list-item class="md-3-line noright" ng-repeat="s in subscriptions" ng-click="null">
+                            <div class="md-list-item-text" layout="column">
+                                <h3 layout="row" layout-align="start start"><span flex="30">Name</span><span flex>{{s.name}}</span></h3>
+                                <h4 layout="row" layout-align="start start"><span flex="30">Platfrom</span><span flex>{{s.platfroms}}</span></h4>
+                                <h4 layout="row" layout-align="start start"><span flex="30">Topic</span><span flex>{{s.topic}}</span></h4>
+                            </div>
+                            <md-divider></md-divider>
+                        </md-list-item>
+                    </md-content>
+                </md-list>
+                <!--</md-card>-->
+            </md-content>
+        </md-content>
+        <!--Subscription Samples end-->
 
-</md-content>
+    </md-content>
 
-<!--thread table end-->
+    <!--thread table end-->
 </md-content>
