update total count in pagination

--- a/public/templates/pagination.custom.html
+++ b/public/templates/pagination.custom.html
@@ -30,6 +30,7 @@
     text-decoration: none;
 }*/
 </style>
+ <st-summary></st-summary>
 <ul class="pagination" ng-if="pages.length >= 2" layout="row" layout-align="center center">
     <!--<li ng-class="{active: page==currentPage}" >
         <a href="javascript: void(0);" ng-click="selectPage(1)" ><<</a>
