add several pages

--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -9,17 +9,17 @@
         <md-grid-list md-cols="4" md-row-height="48px">
             <md-grid-tile md-colors="{background:'blue'}">
                     <h3>New Threads</h3>
-                    <md-button class="md-fab md-accent md-mini">3</md-button>
+                    <md-button class="md-flat md-mini">3</md-button>
             </md-grid-tile>
-            <md-grid-tile md-colors="{background:'yellow'}">
+            <md-grid-tile md-colors="{background:'deep-orange'}">
                     <h3>Pendding</h3>
-                    <md-button class="md-fab md-mini">3</md-button>
+                    <md-button class="md-flat md-mini">3</md-button>
             </md-grid-tile>
             <md-grid-tile md-colors="{background:'green'}">
                     <h3>Today UT</h3>
                     <md-button class="md-flat md-mini" md-colors="{color:'yellow'}">360(75%)</md-button>
             </md-grid-tile>
-            <md-grid-tile md-colors="{background:'red'}">
+            <md-grid-tile md-colors="{background:'indigo'}">
                     <h3>Anything else</h3>
             </md-grid-tile>
         </md-grid-list>
@@ -89,7 +89,7 @@
                     <th>Status</th>
                     <th>title</th>
                     <th st-sort="create_date" st-sort-default="reverse" st-skip-natural="true">Create Datetime</th>
-                    <th st-sort="created_at" st-sort-default="reverse" st-skip-natural="true">LastUpdate Datetime</th>
+                    <th st-sort="create_date" st-sort-default="reverse" st-skip-natural="true">LastUpdate</th>
                     <th>IRT</th>
                     <th>QR</th>
                     <th>UT</th>
