--- a/public/templates/subscription_detail.html
+++ b/public/templates/subscription_detail.html
@@ -44,7 +44,7 @@
                 
                 <section layout="row" layout-align="end center" style="margin-right:20px">
                     <md-button class="groupX left" md-colors="{background:'orange-800'}">Clear</md-button>
-                    <md-button class="groupX middle" md-colors="{background:'red'}">Cancel</md-button>
+                    <md-button class="groupX middle" md-colors="{background:'red'}" ng-click="cancel()">Cancel</md-button>
                     <md-button class="groupX right" md-colors="{background:'green'}">Submit</md-button>
                 </section>
             </md-card>
